--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
   pptools:
     image: pptools
-    build: ./pptools
+    build: .
     ports:
       - 127.0.0.1:5000:5000
     volumes:
